fixed misalignemnt on ticket preview

--- a/src/Pages/Main/Main.styles.scss
+++ b/src/Pages/Main/Main.styles.scss
@@ -5,6 +5,10 @@
     align-items: center;
     width: 100%;
 
+    .mainpage-heading {
+        margin-top: 1rem;
+    }
+
     .ticket-list {
         list-style: none;
         padding: 0;
