--- a/src/components/Ticket-Preview/TicketPreview.styles.scss
+++ b/src/components/Ticket-Preview/TicketPreview.styles.scss
@@ -55,6 +55,7 @@
             justify-content: space-between;
             align-items: flex-start;
             margin-left: 0.5rem;
+            width: 15rem;
             
             .priority {
                 display: flex;
